--- a/app/src/main/res/layout/activity_new_farmer_approval_wait.xml
+++ b/app/src/main/res/layout/activity_new_farmer_approval_wait.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Farmer.NewFarmer.NewFarmerApprovalWaitActivity">
+    tools:context=".NewFarmer.NewFarmerApprovalWaitActivity">
 
     <TextView
         android:layout_width="wrap_content"
