--- a/app/src/main/res/layout/view_dash_status.xml
+++ b/app/src/main/res/layout/view_dash_status.xml
@@ -2,26 +2,30 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:orientation="horizontal"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:paddingBottom="10dp"
-    android:paddingTop="10dp"
-    android:weightSum="6">
+    android:paddingTop="10dp">
 
     <TextView
-        android:textSize="22sp"
+        android:layout_weight="1"
+        android:textSize="18sp"
         android:id="@+id/view_dash_list_title"
-        android:layout_width="250dp"
+        android:layout_width="match_parent"
+        android:paddingRight="80dp"
         android:text="TEXT"
         android:layout_height="wrap_content"/>
 
     <TextView
+        android:layout_weight="0.02"
         android:textSize="22sp"
         android:id="@+id/view_dash_list_count"
         android:layout_width="40dp"
+        android:layout_marginHorizontal="10dp"
         android:text="156"
         android:layout_height="wrap_content"/>
 
   <ImageView
+      android:layout_weight="0.02"
       android:id="@+id/view_dash_list_img"
       android:layout_width="30dp"
       android:layout_height="30dp"
