added new manager's waiting message

--- a/app/src/main/res/layout/activity_manager_approval_wait.xml
+++ b/app/src/main/res/layout/activity_manager_approval_wait.xml
@@ -57,12 +57,23 @@
 
 
     <TextView
+        android:textSize="22sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="132dp"
         android:layout_marginEnd="132dp"
         android:layout_marginBottom="356dp"
         android:text="Welcome new Manager"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="132dp"
+        android:layout_marginEnd="132dp"
+        android:layout_marginBottom="306dp"
+        android:text="Please Wait for Admins Approval...."
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
