--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -4,6 +4,9 @@
     <item android:title="Profile"
         android:icon="@drawable/baseline_person_24"
         android:id="@+id/menu_profile"/>
+    <item android:title="My Manager"
+        android:icon="@drawable/baseline_settings_24"
+        android:id="@+id/menu_farmer_manager"/>
     <item android:title="Setting"
         android:icon="@drawable/baseline_settings_24"
         android:id="@+id/menu_setting"/>
