--- a/app/src/main/res/layout/activity_manager_approval_wait.xml
+++ b/app/src/main/res/layout/activity_manager_approval_wait.xml
@@ -5,29 +5,28 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Manager.NewManager.ManagerApprovalWaitActivity">
-
     <com.google.android.material.appbar.AppBarLayout
 
+        android:id="@+id/appBarLayout2"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-   >
+        app:layout_constraintTop_toTopOf="parent">
 
         <androidx.appcompat.widget.Toolbar
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:padding="8dp"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:padding="8dp">
 
                 <androidx.cardview.widget.CardView
-                    android:layout_marginLeft="5dp"
                     android:id="@+id/cardView"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
+                    android:layout_marginLeft="5dp"
                     app:cardCornerRadius="45dp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent">
@@ -44,8 +43,8 @@
                     android:id="@+id/manager_approval_profile_name"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:gravity="center"
                     android:layout_marginStart="14dp"
+                    android:gravity="center"
                     android:text="@string/app_name"
                     android:textSize="22sp"
                     app:layout_constraintStart_toEndOf="@+id/cardView"
@@ -55,27 +54,24 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-
     <TextView
-        android:textSize="22sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="132dp"
-        android:layout_marginEnd="132dp"
-        android:layout_marginBottom="356dp"
+        android:layout_marginBottom="31dp"
         android:text="Welcome new Manager"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textSize="22sp"
+        app:layout_constraintBottom_toTopOf="@+id/textView2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
     <TextView
+        android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="132dp"
-        android:layout_marginEnd="132dp"
-        android:layout_marginBottom="306dp"
         android:text="Please Wait for Admins Approval...."
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
