--- a/app/src/main/res/layout/popup_agent_profile.xml
+++ b/app/src/main/res/layout/popup_agent_profile.xml
@@ -66,10 +66,10 @@
                 <TextView
                     android:textStyle="bold"
                     android:id="@+id/popup_agent_name"
-                    android:layout_width="match_parent"
+                    android:layout_width="120dp"
                     android:layout_height="match_parent"
                     android:text="Name Sirname"
-                    android:textSize="34sp" />
+                    android:textSize="22sp" />
                 <TextView
                     android:textSize="15sp"
                     android:text="94203943293"
