--- a/app/src/main/res/layout/prompt_admin_select_manager.xml
+++ b/app/src/main/res/layout/prompt_admin_select_manager.xml
@@ -26,5 +26,18 @@
         android:layout_height="400dp"
         android:divider="@null"
         android:dividerHeight="0dp"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingHorizontal="20dp"
+        android:gravity="right">
+
+    <Button
+        android:id="@+id/prompt_admin_select_manager_cancel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Cancel"/>
+    </LinearLayout>
 
 </LinearLayout>
