--- a/app/src/main/res/layout/activity_farmer_select_farm.xml
+++ b/app/src/main/res/layout/activity_farmer_select_farm.xml
@@ -1,17 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".Farmer.Dashboard.ExplorePlants.PlantAddition.FarmerSelectFarmActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_height="?attr/actionBarSize">
 
         <androidx.appcompat.widget.Toolbar
             android:layout_width="match_parent"
@@ -23,7 +21,7 @@
                 android:contentDescription="Select Plant back button for farmer"
                 android:layout_height="match_parent"
                 android:background="@android:color/transparent"
-                android:src="@drawable/baseline_arrow_back_ios_new_24" />
+                android:src="@drawable/ic_baseline_arrow_back_24" />
         </androidx.appcompat.widget.Toolbar>
 
 
@@ -32,29 +30,22 @@
 
     <TextView
         android:layout_width="220dp"
-        android:layout_height="100dp"
-        android:layout_marginTop="68dp"
+        android:layout_height="wrap_content"
+        android:layout_marginVertical="10dp"
         android:paddingVertical="5dp"
         android:paddingLeft="20dp"
         android:text="Select an Available Farm"
-        android:textSize="30sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:textSize="25sp"
+        android:textStyle="bold" />
 
     <LinearLayout
+        android:layout_weight="1"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:layout_marginBottom="115dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="180dp">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
         <ListView
+            android:layout_weight="1"
             android:id="@+id/farmer_select_farm_popup_listView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -71,16 +62,22 @@
     </LinearLayout>
 
 
-
-    <Button
-        android:id="@+id/farmer_select_farm_popup_select_button_next"
-        android:layout_width="wrap_content"
-        android:text="Next"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="25dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
+        android:orientation="horizontal"
+        android:layout_marginVertical="20dp"
+        android:paddingHorizontal="20dp"
+        android:gravity="right">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <Button
+            android:id="@+id/farmer_select_farm_popup_select_button_next"
+            android:layout_width="wrap_content"
+            android:text="Next"
+            android:layout_height="wrap_content" />
+
+    </LinearLayout>
+
+
+
+</LinearLayout>
