changed farmer plant model to accommodate managers details and send specific request fir the plant to the manager.

--- a/app/src/main/res/layout/activity_farmer_select_farm.xml
+++ b/app/src/main/res/layout/activity_farmer_select_farm.xml
@@ -39,18 +39,16 @@
         android:textStyle="bold" />
 
     <LinearLayout
-        android:layout_weight="1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <ListView
-            android:layout_weight="1"
             android:id="@+id/farmer_select_farm_popup_listView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:divider="@null"
-            />
+            android:layout_weight="1"
+            android:divider="@null" />
 
         <Button
             android:id="@+id/farmer_select_farm_popup_add_farm"
