--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,9 +21,11 @@
             android:layout_height="50dp"
             app:srcCompat="@drawable/baseline_signal_wifi_statusbar_connected_no_internet_4_24" />
         <TextView
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginBottom="40dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Please Check Your Internet and Re-Open"
-            android:textSize="21sp" />
+            android:textSize="18sp" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
