--- a/app/src/main/res/layout/activity_admin_farmer_plant.xml
+++ b/app/src/main/res/layout/activity_admin_farmer_plant.xml
@@ -291,7 +291,7 @@
                             android:id="@+id/admin_farmer_plant_admin_approval_button"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Approve"
+                            android:text="Approve/Reject"
                             android:textSize="12dp" />
 
 
