--- a/app/src/main/res/layout/view_farmer_my_plant.xml
+++ b/app/src/main/res/layout/view_farmer_my_plant.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="200dp"
+    android:layout_height="160dp"
     app:cardCornerRadius="8dp"
     app:cardUseCompatPadding="true"
     app:elevation="8dp">
@@ -11,9 +11,9 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView3"
-        android:layout_width="150dp"
-        android:layout_height="180dp"
-        android:layout_marginStart="14dp"
+        android:layout_width="120dp"
+        android:layout_height="150dp"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
         app:cardBackgroundColor="@android:color/transparent"
@@ -24,11 +24,11 @@
 
         <ImageView
             android:id="@+id/view_farmer_my_plant_plant_img"
-            android:background="@drawable/flag_transparent"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:src="@drawable/bg_img_login"
-            android:scaleType="centerCrop"/>
+            android:background="@drawable/flag_transparent"
+            android:scaleType="centerCrop"
+            android:src="@drawable/bg_img_login" />
 
     </androidx.cardview.widget.CardView>
 
@@ -43,7 +43,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="130dp"
+        android:layout_height="100dp"
         android:layout_marginTop="35dp"
         android:layout_marginBottom="35dp"
         android:background="@color/seed"
@@ -55,11 +55,11 @@
 
 
         <androidx.cardview.widget.CardView
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_marginLeft="170dp"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_marginLeft="140dp"
             app:cardCornerRadius="80dp"
-            android:layout_marginVertical="24dp">
+            android:layout_marginVertical="20dp">
         <ImageView
             android:background="@color/md_theme_dark_onSurface"
             android:id="@+id/view_farmer_my_plant_farm_img"
@@ -72,7 +72,7 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_marginHorizontal="15dp"
+            android:layout_marginHorizontal="10dp"
             android:layout_marginVertical="16dp"
             android:orientation="vertical">
             <TextView
@@ -81,8 +81,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="4dp"
                 android:text="Plot Name"
-                android:textAlignment="center"
-                android:textSize="18sp"
+                android:textSize="16sp"
                 android:textStyle="bold" />
         <TextView
             android:id="@+id/view_farmer_my_plant_plant_name"
@@ -91,7 +90,7 @@
             android:layout_marginBottom="4dp"
             android:text="PlantName"
             android:textAlignment="center"
-            android:textSize="16sp" />
+            android:textSize="14sp" />
             <TextView
                 android:id="@+id/view_farmer_my_plant_location"
                 android:layout_width="wrap_content"
